--- a/LibAnimaonline/LibAnimaonline.Console/LibAnimaonline.Console.csproj
+++ b/LibAnimaonline/LibAnimaonline.Console/LibAnimaonline.Console.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{91F3781C-EA9E-4210-A6C0-DA1A7A3E73E9}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{5662CEB1-322B-48CE-B9BE-B7C8B875FB74}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Animaonline</RootNamespace>
-    <AssemblyName>LibAnimaonline</AssemblyName>
+    <RootNamespace>LibAnimaonline.Console</RootNamespace>
+    <AssemblyName>LibAnimaonline.Console</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,9 +31,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,10 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions.cs" />
+    <Compile Include="Tests\BlockingContextTest.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Threading\BlockingContext.cs" />
-    <Compile Include="Threading\BlockingContextActionQueue.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LibAnimaonline\LibAnimaonline.csproj">
+      <Project>{91F3781C-EA9E-4210-A6C0-DA1A7A3E73E9}</Project>
+      <Name>LibAnimaonline</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
