--- a/LibAnimaonline/LibAnimaonline.Console/LibAnimaonline.Console.csproj
+++ b/LibAnimaonline/LibAnimaonline.Console/LibAnimaonline.Console.csproj
@@ -41,9 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Tests\BlockingContextTest.cs" />
+    <Compile Include="Tests\Threading\BlockingContextTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\ITest.cs" />
+    <Compile Include="Tests\Reflection\TypeExplorerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibAnimaonline\LibAnimaonline.csproj">
