--- a/LibAnimaonline/LibAnimaonline/LibAnimaonline.csproj
+++ b/LibAnimaonline/LibAnimaonline/LibAnimaonline.csproj
@@ -46,8 +46,20 @@
   <ItemGroup>
     <Compile Include="Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reflection\TypeExplorer.cs" />
+    <Compile Include="Events\SmartEvent.cs" />
+    <Compile Include="Events\SmartEventArgs.cs" />
+    <Compile Include="Events\SmartEventSubscriber.cs" />
     <Compile Include="Threading\BlockingContext.cs" />
     <Compile Include="Threading\BlockingContextActionQueue.cs" />
+    <Compile Include="Utils\ConsoleBuffer.cs" />
+    <Compile Include="Utils\ConsoleInputCapture.cs" />
+    <Compile Include="Utils\ConsoleOutputCapture.cs" />
+    <Compile Include="Utils\ConsoleTextWriter.cs" />
+    <Compile Include="Utils\LogProvider.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ILTools\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
