--- a/LibAnimaonline/LibAnimaonline/LibAnimaonline.csproj
+++ b/LibAnimaonline/LibAnimaonline/LibAnimaonline.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -37,14 +38,20 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="ILTools\Extensions\MethodInfoExtensions.cs" />
+    <Compile Include="ILTools\Helpers\EnumOpCode.cs" />
+    <Compile Include="ILTools\Helpers\OpCodeDescriber.cs" />
+    <Compile Include="ILTools\Helpers\OpCodesTable.cs" />
+    <Compile Include="ILTools\ILTools\ILInstruction.cs" />
+    <Compile Include="ILTools\ILTools\ILTools.cs" />
+    <Compile Include="ILTools\ILTools\MethodILInfo.cs" />
+    <Compile Include="ILTools\ILTools\OperandReader.cs" />
+    <Compile Include="ILTools\vCLR\VCLRExecContext.cs" />
+    <Compile Include="ILTools\vCLR\vCLRScope.cs" />
+    <Compile Include="ILTools\vCLR\VirtualCLR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\TypeExplorer.cs" />
     <Compile Include="Events\SmartEvent.cs" />
@@ -58,9 +65,7 @@
     <Compile Include="Utils\ConsoleTextWriter.cs" />
     <Compile Include="Utils\LogProvider.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ILTools\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
