--- a/LibAnimaonline/LibAnimaonline/LibAnimaonline.csproj
+++ b/LibAnimaonline/LibAnimaonline/LibAnimaonline.csproj
@@ -36,6 +36,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
