--- a/LibAnimaonline/LibAnimaonline.Console/LibAnimaonline.Console.csproj
+++ b/LibAnimaonline/LibAnimaonline.Console/LibAnimaonline.Console.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tests\Events\SmartEventTest.cs" />
     <Compile Include="Tests\ILTools\ILToolsTest.cs" />
     <Compile Include="Tests\Threading\BlockingContextTest.cs" />
     <Compile Include="Program.cs" />
