--- a/LibAnimaonline/LibAnimaonline/LibAnimaonline.csproj
+++ b/LibAnimaonline/LibAnimaonline/LibAnimaonline.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Extensions\ActionExtensions.cs" />
     <Compile Include="Extensions\ObjectExtensions.cs" />
     <Compile Include="Extensions\IEnumerableExtensions.cs" />
+    <Compile Include="Extensions\PropertyInfoExtensions.cs" />
     <Compile Include="ILTools\EnumOpCode.cs" />
     <Compile Include="ILTools\Extensions\MethodInfoExtensions.cs" />
     <Compile Include="ILTools\ILInstruction.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="ILTools\vCLR\vCLRScope.cs" />
     <Compile Include="ILTools\vCLR\VirtualCLR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reflection\AttributeHelper.cs" />
     <Compile Include="Reflection\ChangeWatcher.cs" />
     <Compile Include="Reflection\TypeExplorer.cs" />
     <Compile Include="Events\SmartEvent.cs" />
